--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
+    "start:dev": "nodemon server.js -e html,js,css",
     "dev": "nodemon server.js -e html,js,css"
   },
   "author": "",
